<?xml version="1.0"?>
<package format="2">
  <name>spot_basic_behaviors</name>
  <version>0.0.0</version>
  <description>The spot_basic_behaviors package</description>

  <maintainer email="sktometometo@todo.todo">sktometometo</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>


  <export>
  </export>
</package>
