<?xml version="1.0"?>
<package format="2">
  <name>spot_behavior_manager_demo</name>
  <version>0.0.0</version>
  <description>The spot_behavior_manager_demo package</description>

  <maintainer email="sktometometo@todo.todo">sktometometo</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>spot_behavior_manager</exec_depend>
  <exec_depend>spot_basic_behavior</exec_depend>
  <exec_depend>spot_autowalk_data</exec_depend>

  <export>
  </export>
</package>
