<?xml version="1.0"?>
<package format="2">
  <name>spot_behavior_manager_msgs</name>
  <version>0.0.0</version>
  <description>The spot_behavior_manager_msgs package</description>

  <maintainer email="sktometometo@todo.todo">sktometometo</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <exec_depend>actionlib</exec_depend>
  <exec_depend>actionlib_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>

  <export>
  </export>
</package>
